# Asteria

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml
apps/api/: .env.example  AGENTS.md  CLAUDE.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260428_0001_mvp_database_schema.py  20260430_0002_add_model_roles_table.py  20260430_0003_add_provider_models_table.py  20260430_0004_remove_is_active_from_ai_providers.py  20260430_0005_add_repositories_table.py
apps/api/app/: __init__.py  main.py
apps/api/app/ai/: __init__.py  errors.py  openai_compatible.py  types.py
apps/api/app/core/: __init__.py  config.py  secrets.py
apps/api/app/db/: base.py  session.py  types.py
apps/api/app/models/: __init__.py  conversation.py  knowledge.py  message.py  model_role.py  project.py  provider.py  repository.py  setting.py
apps/api/app/rag/: __init__.py  chat.py  retrieval.py
apps/api/app/schemas/: __init__.py  chat.py  common.py  conversation.py  knowledge.py  message.py  model_role.py  project.py  provider.py  rag.py  repository.py  search.py  tag.py
apps/api/app/services/: chat.py  (+11 more)
apps/api/tests/: conftest.py  test_chat_api.py  test_config.py  test_conversations_api.py  test_database_session.py  test_embedding_pipeline.py  test_health.py  test_knowledge_api.py  test_local_models_api.py  test_model_roles_api.py  test_mvp_database_behavior.py  test_mvp_schema_metadata.py  test_projects_api.py  test_provider_adapter.py  test_providers_api.py  test_rag_chat_api.py  test_repositories_api.py  test_retrieval_service.py  test_tags_api.py
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
(+93 files in other folders)
