[package]
name = "asteria-desktop"
version = "0.1.0"
description = "Asteria desktop client"
authors = ["Asteria Contributors"]
edition = "2021"

[lib]
name = "asteria_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
